--- a/xinx/ui/projectproperty.ui
+++ b/xinx/ui/projectproperty.ui
@@ -110,7 +110,14 @@
            </widget>
           </item>
           <item row="0" column="1" >
-           <widget class="QLineEdit" name="m_nameLineEdit" />
+           <widget class="QLineEdit" name="m_nameLineEdit" >
+            <property name="whatsThis" >
+             <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
+p, li { white-space: pre-wrap; }
+&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">This is the project name showed in the title bar of &lt;span style=" font-weight:600;">XINX&lt;/span>.This just an informative information useless.&lt;/p>&lt;/body>&lt;/html></string>
+            </property>
+           </widget>
           </item>
           <item row="1" column="2" >
            <widget class="QToolButton" name="m_projectButton" >
@@ -120,13 +127,34 @@
            </widget>
           </item>
           <item row="1" column="1" >
-           <widget class="DirectoryEdit" name="m_projectLineEdit" />
+           <widget class="DirectoryEdit" name="m_projectLineEdit" >
+            <property name="whatsThis" >
+             <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
+p, li { white-space: pre-wrap; }
+&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">This is the project directory (generally where is stored &lt;span style=" font-style:italic;">configuration.xml&lt;/span>). This is the root of the project directory dock, used to search file and for &lt;span style=" font-style:italic;">revision control system&lt;/span> access.&lt;/p>&lt;/body>&lt;/html></string>
+            </property>
+           </widget>
           </item>
           <item row="3" column="1" >
-           <widget class="QComboBox" name="m_projectRCSComboBox" />
+           <widget class="QComboBox" name="m_projectRCSComboBox" >
+            <property name="whatsThis" >
+             <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
+p, li { white-space: pre-wrap; }
+&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">This the list of &lt;span style=" font-style:italic;">revision control system&lt;/span>. The list is appended by modules that you can find in the customize dialog.&lt;/p>&lt;/body>&lt;/html></string>
+            </property>
+           </widget>
           </item>
           <item row="2" column="1" >
-           <widget class="DirectoryEdit" name="m_logLineEdit" />
+           <widget class="DirectoryEdit" name="m_logLineEdit" >
+            <property name="whatsThis" >
+             <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
+p, li { white-space: pre-wrap; }
+&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">This is the path of the log server directory (where is stored all &lt;span style=" font-style:italic;">presentation_*.xml&lt;/span> files).&lt;/p>&lt;/body>&lt;/html></string>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
@@ -199,6 +227,12 @@
           </item>
           <item row="0" column="1" colspan="2" >
            <widget class="QComboBox" name="m_langComboBox" >
+            <property name="whatsThis" >
+             <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
+p, li { white-space: pre-wrap; }
+&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">This is the default lang used by your project. This can be used for the search path of the &lt;span style=" text-decoration: underline;">C&lt;/span>ustom files tab.&lt;/p>&lt;/body>&lt;/html></string>
+            </property>
             <item>
              <property name="text" >
               <string>FRA</string>
@@ -261,6 +295,12 @@
           </item>
           <item row="1" column="1" colspan="2" >
            <widget class="QComboBox" name="m_navigatorComboBox" >
+            <property name="whatsThis" >
+             <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
+p, li { white-space: pre-wrap; }
+&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">This is the default navigator used in the list of path in the &lt;span style=" text-decoration: underline;">C&lt;/span>ustom files tab.&lt;/p>&lt;/body>&lt;/html></string>
+            </property>
             <item>
              <property name="text" >
               <string>NAV/MIC</string>
@@ -353,6 +393,14 @@
        </property>
        <item row="0" column="0" >
         <widget class="QGroupBox" name="m_webServiceGroupBox" >
+         <property name="whatsThis" >
+          <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
+p, li { white-space: pre-wrap; }
+&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Check this box is you want add service web to the project. The list is a list of WSDL. When you start the project, &lt;span style=" font-weight:600;">XINX&lt;/span> will connect to the service and download the description file.&lt;/p>
+&lt;p style="-qt-paragraph-type:empty; margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">&lt;/p>
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">Next you can execute a service stream that open a dialog with the in stream and the out stream.&lt;/p>&lt;/body>&lt;/html></string>
+         </property>
          <property name="title" >
           <string>Project has WebServices</string>
          </property>
@@ -378,6 +426,12 @@
       <layout class="QGridLayout" >
        <item row="0" column="0" >
         <widget class="QGroupBox" name="m_specifiqueGroupBox" >
+         <property name="whatsThis" >
+          <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
+p, li { white-space: pre-wrap; }
+&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">If checked, &lt;span style=" font-weight:600;">XINX&lt;/span> will check if the file is standard or not if the file is standard, and in this case the project porpose you to prefix the file.&lt;/p>&lt;/body>&lt;/html></string>
+         </property>
          <property name="title" >
           <string>&amp;Project is derivated from standard</string>
          </property>
@@ -428,7 +482,14 @@
            </widget>
           </item>
           <item row="4" column="1" >
-           <widget class="QLineEdit" name="m_specifiqueProjectPathLineEdit" />
+           <widget class="QLineEdit" name="m_specifiqueProjectPathLineEdit" >
+            <property name="whatsThis" >
+             <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
+p, li { white-space: pre-wrap; }
+&lt;/style>&lt;/head>&lt;body style=" font-family:'Sans Serif'; font-size:9pt; font-weight:400; font-style:normal;">
+&lt;p style=" margin-top:0px; margin-bottom:0px; margin-left:0px; margin-right:0px; -qt-block-indent:0; text-indent:0px;">The sub-directory where the derivated file must be stored.&lt;/p>&lt;/body>&lt;/html></string>
+            </property>
+           </widget>
           </item>
          </layout>
         </widget>
