Change the option dialog for the presentation dock

--- a/xinx/application.qrc
+++ b/xinx/application.qrc
@@ -75,6 +75,7 @@
         <file>images/preferences-project.png</file>
         <file>images/preferences-tools.png</file>
         <file>images/preferences-ui.png</file>
+        <file>images/preferences-xmlpres.png</file>
         <file>images/project_close.png</file>
         <file>images/project_open.png</file>
         <file>images/pushbutton.png</file>
