--- a/xinx/ui/custom.ui
+++ b/xinx/ui/custom.ui
@@ -913,15 +913,15 @@ p, li { white-space: pre-wrap; }
          <item>
           <widget class="QLabel" name="label_4" >
            <property name="text" >
-            <string>&amp;Root path :</string>
+            <string>&amp;Default expand path :</string>
            </property>
            <property name="buddy" >
-            <cstring>m_rootPathLineEdit</cstring>
+            <cstring>m_expandPathLineEdit</cstring>
            </property>
           </widget>
          </item>
          <item>
-          <widget class="QLineEdit" name="m_rootPathLineEdit" >
+          <widget class="QLineEdit" name="m_expandPathLineEdit" >
            <property name="whatsThis" >
             <string>&lt;html>&lt;head>&lt;meta name="qrichtext" content="1" />&lt;style type="text/css">
 p, li { white-space: pre-wrap; }
